--- a/css/settings.css
+++ b/css/settings.css
@@ -42,13 +42,23 @@
   position: relative;
   top: 10px;
   left: 10px;
-  margin: 0 30px 0 0;
+  margin: 0 30px 0 30px;
+  text-align: center;
 }
 
 .modal-content #modalHeader img {
   width: 48px;
   height: 48px;
   float: left;
+}
+
+.modal-content #modalBody {
+  padding-top: 20px;
+  text-align: center;
+}
+
+.modal-content #modalBody div {
+  display: inline-block;
 }
 
 /* The Close Button */
