--- a/css/settings.css
+++ b/css/settings.css
@@ -41,7 +41,6 @@
 .modal-content #modalHeader h2 {
   position: relative;
   top: 10px;
-  left: 10px;
   margin: 0 30px 0 30px;
   text-align: center;
 }
@@ -75,4 +74,99 @@
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+.customOpenImage {
+  position: relative;
+}
+
+.customTopElement {
+  background-color: #454545;
+  background-image: linear-gradient(top, #3e3e3e, #333);
+  border: 1px solid #141414;
+  box-sizing: border-box;
+  border-radius: 2px;
+  box-shadow: 0 1px 0 rgba(255, 255, 255, .06), 1px 1px 0 rgba(255, 255, 255, .03), -1px -1px 0 rgba(0, 0, 0, .02), inset 1px 1px 0 rgba(255, 255, 255, .05);
+  color: #aaa;
+  cursor: pointer;
+  display: inline-table;
+  height: 100%;
+  font-size: 11px;
+  font-weight: bold;
+  margin-right: 10px;
+  outline: 0;
+  text-align: center;
+  text-decoration: none;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, .5);
+  vertical-align: middle;
+  white-space: normal;
+  word-wrap: normal;
+}
+
+.customTopElement:hover {
+  border: 1px solid #191919;
+  box-shadow: 0 1px 0 rgba(255, 255, 255, .09), 1px 1px 0 rgba(255, 255, 255, .05), -1px -1px 0 rgba(0, 0, 0, .02), inset 1px 1px 0 rgba(255, 255, 255, .05);
+}
+
+.customTopElement a {
+  box-shadow: unset !important;
+  padding: 5px 0px 5px 8px !important;
+  margin: 0 !important;
+  border: 0 !important;
+}
+
+.customTopElement a:hover {
+  box-shadow: unset !important;
+  border: 0 !important;
+}
+
+a.virDropDown {
+  padding: 5px 4px 5px 0px !important;
+}
+
+/* Dropdown Content (Hidden by Default) */
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  z-index: 1;
+  width: 100%;
+  min-width: 0px;
+  margin: 0 1px;
+}
+
+/* Links inside the dropdown */
+
+.dropdown-content a {
+  text-decoration: none !important;
+  display: block !important;
+  margin: 0 12px 0 0 !important;
+  border-top: 0 !important;
+  border-left: 0 !important;
+  border-right: 0 !important;
+  border-color: #333 !important;
+  box-shadow: unset !important;
+  border-radius: 0px !important;
+}
+
+.dropdown-content a:last-child {
+  border-radius: 0 0 2px 2px !important;
+  border: 0 !important;
+}
+
+.dropdown-content a:hover {
+  box-shadow: unset !important;
+  border-top: 0 !important;
+  border-left: 0 !important;
+  border-right: 0 !important;
+  border-color: #333 !important;
+}
+
+/* Change color of dropdown links on hover */
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+
+.show {
+  display: block;
 }
