#7 removed most of the dependencies on google classes

--- a/app/css/buttons.scss
+++ b/app/css/buttons.scss
@@ -85,3 +85,16 @@ a.virDropDown {
 .show {
   display: block;
 }
+
+.virButtonSpan {
+  fill: currentColor;
+  height: 14px;
+  line-height: 14px;
+  width: 14px;
+
+  svg {
+    display: block;
+    width: inherit;
+    height: inherit;
+  }
+}
