Added option to hide 'Share' button

--- a/app/css/buttons.scss
+++ b/app/css/buttons.scss
@@ -97,6 +97,10 @@ a.virDropDown {
   display: block;
 }
 
+.virHide {
+  display: none;
+}
+
 .virButtonSpan {
   fill: currentColor;
   height: 14px;
